add some of content and 29 projects

--- a/src/sass/projectPage.scss
+++ b/src/sass/projectPage.scss
@@ -22,7 +22,7 @@
 
 .heading-secondary {
     font-size: 50px;
-    margin-bottom: 25px;
+    margin: 25px 0;
     display: flex;
     justify-content: center;
 }
