add styles to project slider

--- a/src/sass/swiper.scss
+++ b/src/sass/swiper.scss
@@ -1,13 +1,13 @@
 .swiper {
-    height: 300px;
+    height: 410px;
     border-radius: 10px;
 }
 
 .swiper-slide {
-    height: 300px;
+    height: 400px;
+    padding: 5px 40px;
     text-align: start;
-    background-color: #B0D5C7;
-    border: 1px solid black;
+    background-color: #c5d6cf;
     border-radius: 10px;
     position: relative;
 
