--- a/src/sass/homePage.scss
+++ b/src/sass/homePage.scss
@@ -35,6 +35,25 @@
     position: relative;
     width: 80vw;
     margin: 0 auto;
+
+    h2{
+        text-align: center;
+        color: #30584d;
+    }
+
+    .home-section-2-animation ul > li {
+        list-style: none;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin-top: 10px;
+    }
+
+    .star > * {
+        width: 20px;
+        height: 20px;
+        fill: #30584d;
+    }
 }
 
 .home-section-2-animation {
