add project details page routes and pass params

--- a/src/sass/homePage.scss
+++ b/src/sass/homePage.scss
@@ -39,6 +39,7 @@
     h2{
         text-align: center;
         color: #30584d;
+        font-weight: 900;
     }
 
     .home-section-2-animation ul > li {
@@ -86,7 +87,7 @@
         }
 
         & > h2 {
-            font-size: 35px;
+            font-size: 40px;
             margin-bottom: 20px;
             line-height: 1.05;
             
