--- a/src/sass/headerTop.scss
+++ b/src/sass/headerTop.scss
@@ -1,6 +1,7 @@
 .header-top {
-    background-color: #30584D;
-  }
+  background: linear-gradient(135deg, #5d867a, #30584D);
+}
+
   
   .header-top-content {
       width: 80vw;
