--- a/src/sass/swiper.scss
+++ b/src/sass/swiper.scss
@@ -7,9 +7,15 @@
     height: 400px;
     padding: 5px 40px;
     text-align: start;
-    background-color: #c5d6cf;
+    background: linear-gradient(135deg, #c5d6cf, #a5b6af);
     border-radius: 10px;
     position: relative;
+    transition: all 2.5s ease-in-out;
+
+    &:hover {
+        background: linear-gradient(135deg, #c5d6cf, #8a9b95);
+        
+    }
 
     & > p  {
         color: #42665C;
@@ -35,4 +41,15 @@
     width: 100%;
     height: 300px;
     object-fit: cover;
+}
+
+.swiper-slide-sponsors {
+    border-radius: 510px;
+    width: 200px !important;
+    height: 200px;
+    margin-top: 100px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
