--- a/src/sass/homePage.scss
+++ b/src/sass/homePage.scss
@@ -56,6 +56,13 @@
     display: flex;
     justify-content: space-between;
 
+    & > div > h2 {
+            font-size: 2rem;
+            margin-bottom: +320px;
+            text-align: center;
+
+    }
+
     @media (max-width: 900px) {
         flex-direction: column;
     }
@@ -104,7 +111,7 @@
 //section 3
 .home-section-3 {
     width: 80vw;
-    margin: 50px auto;
+    margin: 100px auto;
 
     & > img {
         height: 400px;
@@ -112,4 +119,39 @@
         width: 80vw;
         object-fit: cover;
     }
+}
+
+.objectives-list {
+    list-style: none;
+    padding: 0;
+}
+
+.objective-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 20px; 
+    padding: 10px;
+    background: linear-gradient(135deg, #f5f5f5, #e0e0e0);
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
+    transition: background-color .3s ease
+}
+
+.list-item:hover,
+.objective-item:hover {
+    background: linear-gradient(135deg, #e0e0e0, #f5f5f5);
+}
+
+.custom-hr {
+    height: 2px; 
+    border: none;
+    background-image: linear-gradient(135deg, #88aaa0, rgb(12, 243, 4));
+    margin: 10px 0;
+}
+
+.objective-item span {
+    font-size: 16px; 
+    color: #333;
 }
