--- a/src/sass/button.scss
+++ b/src/sass/button.scss
@@ -4,10 +4,11 @@
     box-shadow: 3px 2px 1px #30584D;
     width: max-content;
     margin: 15px 0px;
-    padding: 20px 50px;
+    padding: 15px 50px;
     font-size: 15px;
     cursor: pointer;
     align-items: start;
+    background: linear-gradient(135deg, white, rgb(161, 161, 161));
 
     &:hover {
         background: linear-gradient(135deg, #5d867a, #30584D);
