--- a/src/sass/homePage.scss
+++ b/src/sass/homePage.scss
@@ -18,7 +18,7 @@
             text-align: center;
 
             @media (max-width: 450px) {
-                font-size: 70px;
+                font-size: 50px;
             }
         }
     }
@@ -132,7 +132,7 @@
     gap: 10px;
     margin-bottom: 20px; 
     padding: 10px;
-    background: linear-gradient(135deg, #f5f5f5, #e0e0e0);
+    background: linear-gradient(135deg, #d8d7d7, #e0e0e0);
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 
