--- a/src/sass/aboutPage.scss
+++ b/src/sass/aboutPage.scss
@@ -19,9 +19,9 @@
         flex-direction: column;
         justify-content: space-around;
 
-        & > h1 {
-            font-size: 50px;
-            line-height: 1;
+        & > h2 {
+            font-size: 30px;
+            line-height: 1.4;
 
             @media (max-width: 450px) {
                 font-size: 30px;
@@ -70,19 +70,13 @@
         flex-direction: column-reverse;
     }
 
-    & > div.faq {
-        width: 100%;
+    & > div.accordion {
+        display: flex;
+        flex-direction: column;
 
         & > h2 {
-            font-size: 40px;
+            margin-bottom: 20px;
+            font-size: 35px;
         }
-
-        & > p {
-            font-size: 20px;
-        }
-    }
-
-    & > div.accoridon {
-        display: flex;
     }
 }
