--- a/src/sass/accordion.scss
+++ b/src/sass/accordion.scss
@@ -9,14 +9,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 20px;
     cursor: pointer;
-    background-color: white;
-    box-shadow: 3px 2px 2px #30584D;
+    background: linear-gradient(to left, #829791 10%, white);
     border-radius: 10px;
+    gap: 10px;
 
     &:hover {
-        box-shadow: 5px 4px 2px #30584D;
+      background: linear-gradient(to left, #829791 50%, white);
   
     }
   }
@@ -27,7 +27,7 @@
   }
   
   .accordion-icon {
-    font-size: 20px;
+    font-size: 210px;
     transition: transform 0.3s ease;
   }
   
@@ -41,5 +41,6 @@
   }
 
 .accordion-icon {
-  width: 12px;
+  min-width: 15px;
+  max-width: 15px;
 }
