--- a/src/sass/projectPage.scss
+++ b/src/sass/projectPage.scss
@@ -25,6 +25,10 @@
     margin: 25px 0;
     display: flex;
     justify-content: center;
+
+    @media (max-width: 700px) {
+        font-size: 30px;
+    }
 }
 
 .card {
