--- a/src/sass/button.scss
+++ b/src/sass/button.scss
@@ -1,14 +1,13 @@
 .button {
     border: none;
-    border-radius: 15px;
-    box-shadow: 3px 2px 1px #30584D;
+    border-radius: 10px;
     width: max-content;
     margin: 15px 0px;
-    padding: 15px 50px;
+    padding: 15px 40px;
     font-size: 15px;
     cursor: pointer;
     align-items: start;
-    background: linear-gradient(135deg, white, rgb(161, 161, 161));
+    background: linear-gradient(135deg, white, rgb(218, 218, 218));
 
     &:hover {
         background: linear-gradient(135deg, #5d867a, #30584D);
@@ -16,6 +15,7 @@
     }
 
     &:active {
-        box-shadow: 2px 1px 1px #30584D;
+        background: linear-gradient(135deg, white, rgb(218, 218, 218));
+        color: black;
     }
 }
