--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ html, body {
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: radial-gradient(circle, white, rgb(206, 221, 206), rgb(198, 207, 198));
+  background: radial-gradient(circle, #e1e9e5, #ecf4e5);
   overflow: auto;
   height: auto;
   position: relative;
