--- a/src/sass/aboutPage.scss
+++ b/src/sass/aboutPage.scss
@@ -20,11 +20,12 @@
         justify-content: space-around;
 
         & > h2 {
+            font-weight: 400;
             font-size: 30px;
             line-height: 1.4;
 
             @media (max-width: 450px) {
-                font-size: 30px;
+                font-size: 20px;
             }
         }
     }
@@ -75,8 +76,8 @@
         flex-direction: column;
 
         & > h2 {
-            margin-bottom: 20px;
-            font-size: 35px;
+            margin-bottom: 50px;
+            font-size: 30px;
         }
     }
 }
