--- a/src/sass/homePage.scss
+++ b/src/sass/homePage.scss
@@ -61,9 +61,9 @@
     justify-content: space-between;
 
     & > div > h2 {
-            font-size: 2rem;
-            margin-bottom: +320px;
-            text-align: center;
+        font-weight: 400;
+        font-size: 30px;
+        margin-bottom: 50px !important;
 
     }
 
