change few styles

--- a/src/sass/homePage.scss
+++ b/src/sass/homePage.scss
@@ -134,9 +134,8 @@
     gap: 10px;
     margin-bottom: 20px; 
     padding: 10px;
-    background: linear-gradient(135deg, #d8d7d7, #e0e0e0);
+    // background: linear-gradient(135deg, #d8d7d7, #e0e0e0);
     border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 
     transition: background-color .3s ease
 }
