--- a/src/sass/homePage.scss
+++ b/src/sass/homePage.scss
@@ -16,8 +16,8 @@
         & > h1 {
             font-size: 100px;
             text-align: center;
-            color: transparent;
-            -webkit-text-stroke: 2px black;
+            color: #dfe9d6;
+            -webkit-text-stroke: 2px #011d03;
             
             @media (max-width: 450px) {
                 font-size: 50px;
